--- a/OcGO Test/Assembly-CSharp.csproj
+++ b/OcGO Test/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Code\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Code\Scripts\PlayerActor.cs" />
     <Compile Include="Assets\Code\Scripts\PlayerMenuInteraction.cs" />
+    <Compile Include="Assets\Code\Scripts\ScoreFX.cs" />
     <Compile Include="Assets\Code\Scripts\TrafficLight.cs" />
     <Compile Include="Assets\Code\Scripts\TrafficManager.cs" />
     <Compile Include="Assets\Code\Scripts\VRInput.cs" />
